# Selenium-Python-Tutorial

./: README.md  pyproject.toml
tests/: test_lambdatest_google.py  test_lambdatest_todo.py
